Closed
Bug 493140
Opened 17 years ago
Closed 17 years ago
Theora <video>'s with offsets do not respect the offset values
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
VERIFIED
FIXED
People
(Reporter: cajbir, Assigned: cajbir)
Details
(Keywords: verified1.9.1)
Attachments
(1 file, 1 obsolete file)
|
7.22 KB,
patch
|
roc
:
approval1.9.1+
|
Details | Diff | Splinter Review |
If a theora video contains offset information, that information is not respected by Firefox. Firefox happily displays information outside the cropping boundary. Most often this appears as a green border like on the left of this video:
http://commons.wikimedia.org/wiki/File:ISS_S6_truss_to_39A.ogg
Here is a test video that displays a message if the cropping area is not clipped:
http://v2v.cc/~j/theora_testsuite/offset_test.ogv
Steps to reproduce:
1) Visit http://v2v.cc/~j/theora_testsuite/offset_test.ogv
What you see
============
A video with the message "If you can read this the player you've got there does not offset".
What you should see
===================
The video with that message cropped out.
Flags: wanted1.9.1?
| Assignee | ||
Comment 1•17 years ago
|
||
Assignee: nobody → chris.double
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•17 years ago
|
||
Attachment #377592 -
Attachment is obsolete: true
Comment 3•17 years ago
|
||
Is this the same as bug 488951?
| Assignee | ||
Comment 4•17 years ago
|
||
The fix in that bug only addresses the 2nd comment you raised. This addresses the first. For some reason I thought that bug was resolved which is why I raised this one for the missing first part of your comment.
Flags: wanted1.9.1? → wanted1.9.1+
Whiteboard: [needs landing]
It would be nice to have a reftest here.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Attachment #377593 -
Flags: approval1.9.1+
Comment 7•17 years ago
|
||
(In reply to comment #5)
> It would be nice to have a reftest here.
Done! The latest patch in bug 488951 adds a reftest that uses a video with an offset.
Just in case anyone wants to generate similar test files, here's the process I used:
* generate a suitable PNG image
* edit libtheora/examples/png2theora.c near theora_info_init to set the picture region (in frame_width and frame_height) and offset. Note that the offset MUST be divisible by 2. Offset origin is top left (mentioning this as the offset origin in the theora bitstream is bottom left).
* recompile png2theora and feed it my frame to generate a theora file
* verify the result using ogginfo to check the dimensions and offset (accounting for any padding theora had to introduce), and VLC and QuickTime + XiphQT to check that the result video looks correct
Comment 9•17 years ago
|
||
verified FIXED on builds:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1pre) Gecko/20090601 Shiretoko/3.5pre ID:20090601044045
and
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090528 Minefield/3.6a1pre ID:20090528043233
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•