Bug 493140. Use Theora x/y offset information if present. r=doublec